# personal-bot

./: .gitignore  bot.py  pyproject.toml  requirements.txt
cogs/: errors.py  ffxiv.py  info.py  meta.py  owner.py
utils/: __init__.py  bot.py  constants.py  context.py  help.py  paginators.py  timer.py  webhook_logger.py  xiv_character_cards.py
